fix z-index for login page inputs

--- a/src/sheldon/apps/accounts/static/css/public.css
+++ b/src/sheldon/apps/accounts/static/css/public.css
@@ -51,7 +51,7 @@ form.login .form-control, form.login button {
 	font-size: 16px;
 }
 form.login .form-control:focus {
-	z-index: 2;
+	z-index: 3;
 }
 form.login input[type="text"] {
 	margin-bottom: -1px;
